# CCBR_NextflowTemplate

./: .gitattributes  .gitignore  .nf-core.yml  .pre-commit-config.yaml  .prettierrc  404.html  CHANGELOG.md  CITATION.cff  LICENSE  MANIFEST.in  README.md  clean.sh  index.html  main.nf  main.py  mkdocs.yml  modules.json  nextflow.config  nextflow_schema.json  params.yaml  pyproject.toml
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  WORDLIST.txt  contributors.py  genome_docs.py  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  enchancement_request.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: auto-format.yml  build-nextflow.yml  build.yml  build_mkdocs.yml  docs-mkdocs.yml  docs.yml  draft-release.yml  post-release.yml  techdev-project.yml  user-projects.yml
assets/: slurm_header_biowulf.sh  slurm_header_frce.sh
changelog/: index.html
conf/: base.config  biowulf.config  biowulf_slurm.config  ci_stub.config  containers.config  frce.config  genomes.config  interactive.config  modules.conf  modules.config  slurm.config  slurmint.config  test.config
contributing/: index.html
contributors/: index.html
dev/: index.html
dev/_genomes_tail/: index.html
dev/_params_head/: index.html
dev/changelog/: index.html
dev/contributing/: index.html
dev/contributors/: index.html
dev/search/: search_index.json
dev/user-guide/genomes/: index.html
dev/user-guide/getting-started/: index.html
dev/user-guide/output/: index.html
dev/user-guide/params/: index.html
dev/user-guide/preparing-files/: index.html
dev/user-guide/run/: index.html
dev/user-guide/test-info/: index.html
dev/user-guide/troubleshooting/: index.html
docs/: CHANGELOG.md  CONTRIBUTING.md  _params_head.md  contributors.md  index.md
docs/user-guide/: contributions.md  genomes.md  getting-started.md  output.md  params.md  preparing-files.md  run.md  test-info.md  troubleshooting.md
lib/: Utils.groovy
modules/CCBR/bwa/mem/: main.nf  meta.yml
modules/local/: qc.nf
modules/local/fastqc/: main.nf
search/: search_index.json
src/: __main__.py  util.py
src/TOOL_NAME/: CITATION  __main__.py  util.py
src/TOOL_NAME/workflow/: main.nf  params.yaml  tiny.fastq
subworkflows/local/qc/: main.nf
tests/: nextflow.config  test_cli.py
tests/modules/local/fastqc/: main.nf.test
tests/subworkflows/local/qc/: main.nf.test
user-guide/getting-started/: index.html
user-guide/output/: index.html
user-guide/preparing-files/: index.html
user-guide/run/: index.html
user-guide/test-info/: index.html
user-guide/troubleshooting/: index.html
