[build-system]
requires = [
    "setuptools >= 48",
    "wheel >= 0.29.0",
]
build-backend = 'setuptools.build_meta'

[project]
name = 'TOOL_NAME'
dynamic = ['version','readme']
description = "One-line description of your tool."
keywords = ["bioinformatics", "nextflow"]
authors = [
    {name = "Firstname Lastname", email = "you@email.com"},
]
maintainers = [
    {name = "CCR Collaborative Bioinformatics Resource", email = "ccbr@mail.nih.gov"},
]
license = {file = "LICENSE"}
classifiers = [
    "Environment :: Console",
    "Environment :: MacOS X",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT license",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.7"
dependencies = [
    "nextflow >= 0.4.0",
    "pyyaml >= 6.0",
    "Click >= 8.1.3",
]

[project.optional-dependencies]
dev = [
    "black >= 22.0.0"
]
test = [
    "pytest"
]

[project.scripts]
TOOL_NAME = "TOOL_NAME.__main__:main"

[project.urls]
Homepage = "https://ccbr.github.io/TOOL_NAME"
Documentation = "https://ccbr.github.io/TOOL_NAME"
Repository = "https://github.com/CCBR/TOOL_NAME"
Changelog = "https://github.com/CCBR/TOOL_NAME/blob/main/docs/CHANGELOG.md"

[tools.setuptools]
packages = ["TOOL_NAME"]

[tool.setuptools.dynamic]
version = {file = "src/VERSION"}
readme = {file = "README.md"}
