[build-system]
requires = [
    "setuptools >= 62.3.0",
    "wheel >= 0.29.0",
]
build-backend = 'setuptools.build_meta'

[project]
name = 'TOOL_NAME'
dynamic = ['version','readme']
description = "TODO insert description of TOOL_NAME here"
keywords = ["bioinformatics", "nextflow"]
authors = [
    {name = "Kelly Sovacool", email = "kelly.sovacool@nih.gov"},
    {name = "Vishal Koparde", email = "vishal.koparde@nih.gov"},
]
maintainers = [
    {name = "CCR Collaborative Bioinformatics Resource", email = "ccbr@mail.nih.gov"},
]
license = {file = "LICENSE"}
classifiers = [
    "Environment :: Console",
    "Environment :: MacOS X",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT license",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.10"
dependencies = [
    "ccbr_tools@git+https://github.com/CCBR/Tools",
    "cffconvert@git+https://github.com/citation-file-format/cffconvert@b6045d78aac9e02b039703b030588d54d53262ac",
    "Click >= 8.1.3",
    "pyyaml >= 6.0"
]

[project.optional-dependencies]
dev = [
    "black >= 22.0.0",
    "pre-commit"
]
test = [
    "pytest"
]

[project.scripts]
tool_name = "tool_name.src.__main__:main"

[project.urls]
Homepage = "https://ccbr.github.io/TOOL_NAME"
Documentation = "https://ccbr.github.io/TOOL_NAME"
Repository = "https://github.com/CCBR/TOOL_NAME"
Changelog = "https://github.com/CCBR/TOOL_NAME/blob/main/CHANGELOG.md"

[tool.setuptools.package-dir]
tool_name = "."

[tool.setuptools.package-data]
"*" = ["CITATION.cff", "LICENSE", "VERSION", "main.nf", "nextflow.config", "assets/**", "bin/**", "conf/**", "lib/**", "modules/**", "subworkflows/**", "workflows/**", "tests/**"]

[tool.setuptools.dynamic]
version = {file = "VERSION"}
readme = {file = "README.md"}
